lib/soroban/parser/grammar.treetop
module Soroban

  grammar Excel
    rule formula
      '=' space? logical <Formula> / string / number / boolean
    end
    rule logical
      and ( space? 'or' space? and )*
    end
    rule and
      truthval ( space? 'and' space? truthval )*
    end
    rule truthval
      comparison / '(' space? logical space? ')' / boolean
    end
    rule boolean
      'true' / 'false' / 'TRUE' / 'FALSE'
    end
    rule comparison
      expression ( space? comparator space? expression )*
    end
    rule comparator
      '=' <Equal> / '<>' <NotEqual> / '>=' / '<=' / '>' / '<'
    end
    rule expression
      multiplicative ( space? additive_operator space? multiplicative )*
    end
    rule additive_operator
      '+' / '-'
    end
    rule multiplicative
      value ( space? multiplicative_operator space? value )*
    end
    rule multiplicative_operator
      '^' <Pow> / '*' / '/'
    end
    rule value
      ( function / '(' space? expression space? ')' / range / number / boolean / identifier / string / '-' value )
    end
    rule function
      [a-zA-Z]+ '(' space? arguments? space? ')' <Function>
    end
    rule arguments
      logical ( space? ',' space? logical )*
    end
    rule number
      ( percentage / float / integer / '-' percentage / '-' float / '-' integer )
    end
    rule percentage
      float space? '%' <PercentValue> / integer space? '%' <PercentValue> 
    end
    rule float
      [0-9]* '.' [0-9]+ <FloatValue>
    end
    rule integer
      [0-9]+ <IntegerValue>
    end
    rule identifier
      '$'? [A-Za-z]+ '$'? [1-9] [0-9]* <Identifier> / [a-zA-Z] [a-zA-Z0-9]* <Identifier>
    end
    rule label
      '$'? [A-Za-z]+ '$'? [1-9] [0-9]* <Label>
    end
    rule string
      '"' ('\"' / !'"' .)* '"' / "'" [^']* "'"
    end
    rule range
      label ':' label <Range>
    end
    rule space
      [\s]+
    end
  end

end
